# MDM2021

./: CMakeLists.txt  README.md  package.xml  prova.py
VRep_scene/: my_scene.ttt
_build/doctrees/: environment.pickle
_build/html/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/xml/: _r_e_a_d_m_e_8md.xml  go__to__point_8py.xml  index.xml  index_8rst_8txt.xml  md__r_e_a_d_m_e.xml  namespaceprova.xml  prova_8py.xml  state__machine_8cpp.xml
action/: Pose.action  Position.action
doc/: Doxyfile.in  conf.py  index.rst
doc/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classrt2__assignment1_1_1_position_server-members.html  classrt2__assignment1_1_1_position_server.html  classrt2__assignment1_1_1_position_server__coll__graph.map  classrt2__assignment1_1_1_position_server__inherit__graph.md5  classrt2__assignment1_1_1_state_machine-members.html  classrt2__assignment1_1_1_state_machine.html  classrt2__assignment1_1_1_state_machine__coll__graph.map  classrt2__assignment1_1_1_state_machine__coll__graph.md5  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_81025302fd592f43a2d7c4fbb7eea7b8.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  go__to__point_8py.html  go__to__point_8py_source.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  md__r_e_a_d_m_e.html  menudata.js  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacert2__assignment1.html  namespaces.html  namespacesim__launch.html  namespaceuser__interface.html  (+13 more)
doc/latex/: _c_make_lists_8txt.tex  annotated.tex  classrt2__assignment1_1_1_position_server.tex  classrt2__assignment1_1_1_position_server__coll__graph.md5  classrt2__assignment1_1_1_state_machine.tex  classrt2__assignment1_1_1_state_machine__inherit__graph.md5  dir_81025302fd592f43a2d7c4fbb7eea7b8.tex  files.tex  go__to__point_8py.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  (+11 more)
launch/: sim.launch  sim_launch.py
notebook/: user_interface.ipynb
scripts/: go_to_point.py  user_interface.py
src/: position_service.cpp  state_machine.cpp
(+44 files in other folders)
